Download info from user check in
